--- a/shoppy.bz/src/style/Home.css
+++ b/shoppy.bz/src/style/Home.css
@@ -21,6 +21,7 @@
     margin-bottom: -150px;
     -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), 
     rgba(0, 0, 0, 0));
+    padding-top: 12px;
 }
 
 .home__row img {
